
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int in_handshake; } ;


 int SSL_free (TYPE_1__*) ;
 int SSL_shutdown (TYPE_1__*) ;
 int close (int ) ;
 TYPE_1__* conn ;
 int exit (int ) ;
 int sk ;

void handler(){
 if(!conn->in_handshake){
  SSL_shutdown(conn);
  SSL_free(conn);
 }
 close(sk);
 exit(0);
}
