; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_4312.c_handler.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_4312.c_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@conn = common dso_local global %struct.TYPE_4__* null, align 8
@sk = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @handler() #0 {
  %1 = load %struct.TYPE_4__*, %struct.TYPE_4__** @conn, align 8
  %2 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %10, label %5

5:                                                ; preds = %0
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @conn, align 8
  %7 = call i32 @SSL_shutdown(%struct.TYPE_4__* %6)
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** @conn, align 8
  %9 = call i32 @SSL_free(%struct.TYPE_4__* %8)
  br label %10

10:                                               ; preds = %5, %0
  %11 = load i32, i32* @sk, align 4
  %12 = call i32 @close(i32 %11)
  %13 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @SSL_shutdown(%struct.TYPE_4__*) #1

declare dso_local i32 @SSL_free(%struct.TYPE_4__*) #1

declare dso_local i32 @close(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
